minor style changes, pong window size decreased to avoid overflow

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 
 .navbar-style {
     margin-top: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     background-color: var(--my-dark-blue);
     color: white;
 }
@@ -36,6 +36,7 @@ body {
 
 .jumbotron {
     border-radius: 40px;
+    padding: 30px;
 }
 
 .btn-default {
@@ -44,8 +45,7 @@ body {
 }
 
 .btn-default:hover {
-    /* move this to be a variable */
-    color: rgb(199.0, 0.0, 57.0);
+    color: var(--my-gold);
 }
 
 
@@ -69,21 +69,13 @@ body {
    font-size: 18px;
 }
 
-
-/*
-.embed-responsive-item {
-    width: 400px;
-    height: 75px;
-}*/
-
-
-
 #pong {
     width: 440px;
     height: 170px;
     border: none;
-    scale: 0.95;
+    scale: 1;
     overflow: hidden;
+    display: block;
 }
 
 @media (min-width: 576px) {
